[gd_scene load_steps=4 format=3 uid="uid://cbu21il3emqxn"]

[ext_resource type="Script" uid="uid://12xvxhmjwphn" path="res://src/gui/global_levels_screens/win_game_layer/win_game_layer.gd" id="1"]
[ext_resource type="Theme" uid="uid://db51ncs4eb7e0" path="res://assets/ui-theme.tres" id="3"]

[sub_resource type="LabelSettings" id="LabelSettings_bvw4n"]
font_size = 25

[node name="WinGameLayer" type="CanvasLayer"]
script = ExtResource("1")

[node name="Hidable" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("3")

[node name="ColorRect" type="ColorRect" parent="Hidable"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = 1.0
offset_bottom = 1.0
color = Color(0.25098, 0.0901961, 0.494118, 0.717647)

[node name="VBoxOptions" type="VBoxContainer" parent="Hidable"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.468
anchor_right = 0.5
anchor_bottom = 0.468
offset_left = -131.0
offset_top = 0.039978
offset_right = 133.0
offset_bottom = 199.04
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 33
alignment = 1

[node name="NextLevel" type="Button" parent="Hidable/VBoxOptions"]
process_mode = 2
layout_mode = 2
focus_neighbor_top = NodePath("../MainMenu")
focus_neighbor_bottom = NodePath("../MainMenu")
focus_next = NodePath("../MainMenu")
focus_previous = NodePath("../MainMenu")
mouse_filter = 1
text = "Next Level"

[node name="MainMenu" type="Button" parent="Hidable/VBoxOptions"]
process_mode = 2
layout_mode = 2
focus_neighbor_top = NodePath("../NextLevel")
focus_neighbor_bottom = NodePath("../NextLevel")
focus_next = NodePath("../NextLevel")
focus_previous = NodePath("../NextLevel")
text = "Main Menu"

[node name="Label" type="Label" parent="Hidable"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.468
anchor_right = 0.5
anchor_bottom = 0.468
offset_left = -271.136
offset_top = -253.608
offset_right = 272.264
offset_bottom = -82.544
grow_horizontal = 2
theme = ExtResource("3")
text = "YOU WIN this level!
Awesome!!
But actually this is it (for now)
Next Level is coming soon
(beware of unfinished level ahead)"
label_settings = SubResource("LabelSettings_bvw4n")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Hidable/VBoxOptions/NextLevel" to="." method="_on_NextLevel_pressed"]
[connection signal="pressed" from="Hidable/VBoxOptions/MainMenu" to="." method="_on_MainMenu_pressed"]
